# Mix_Trainer_Plugins

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CMakeSettings.json  Game.cpp  Game.h  Game_2.h  Game_Mixer.cpp  Game_Mixer.h  Game_Mixer_Alt.cpp  Game_Mixer_Alt.h  Game_Mixer_Timer.cpp  Game_Mixer_Timer.h  Game_Mixer_Tries.cpp  Game_Mixer_Tries.h  Game_Solo.cpp  Game_Solo.h  Host.10x  MainMenu.h  PluginEditor_Host.h  PluginEditor_Master.h  PluginEditor_Slave.h  PluginEditor_Track.h  Processor_Host.cpp  Processor_Host.h  Processor_Master.cpp  Processor_Master.h  Processor_Slave.cpp  Processor_Slave.h  Processor_Track.cpp  Processor_Track.h  Standalone.10x  Track.10x  build.bat  build_all.bat  build_all_release.bat  build_host.bat  build_ray.bat  build_standalone.bat  (+14 more)
.github/: juce_cli.yml
.github/workflows/: juce_cli.yml
Application/: Application.cpp  Application.h  MainMenu.h
Game/: Compressor_Game.cpp  Compressor_Game.h  Compressor_Game_UI.cpp  Compressor_Game_UI.h  Frequency_Game.cpp  Frequency_Game.h  Frequency_Game_UI.cpp  Frequency_Game_UI.h  Frequency_Widget.h  Game.cpp  Game.h  Game_Mixer.cpp  Game_Mixer.h  Game_Mixer_Timer.cpp  Game_Mixer_Timer.h  Game_Mixer_Tries.cpp  Game_Mixer_Tries.h  Game_Mixer_UI.cpp  Game_Mixer_UI.h  Game_UI.cpp  Game_UI.h
Plugin_Host/: Application.cpp  Main_Menu.h  PluginEditor_Host.h  Processor_Host.cpp  Processor_Host.h
Plugin_Track/: PluginEditor_Track.h  Processor_Track.cpp  Processor_Track.h
Standalone/: Application_Standalone.cpp  Application_Standalone.h  CompressorGame.cpp  CompressorGame.h  Compressor_Game_UI.cpp  Compressor_Game_UI.h  DemoUtilities.h  FrequencyGame.cpp  FrequencyGame.h  FrequencyWidget.h  Frequency_Game_UI.cpp  Standalone.cpp  Standalone.h  Standalone_UI.h
packaging/: dmg.json
ray/: config_layout.rgl  em_example.c  layout_name.rgl  main.c  main.cpp  miniaudio.c  miniaudio.h  raygui.c  shell.html
shared/: pch.h  shared.cpp  shared.h  shared_ui.h
